--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #b22222;
     color: #fff;
     padding: 10px 20px;
     display: flex;
@@ -60,7 +60,7 @@ h2 {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
+    background-color: #b22222;
     color: #fff;
     position: fixed;
     bottom: 0;
