--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ h2 {
     margin-bottom: 10px;
 }
 
+p {
+  line-height: 1.8;
+}
+
 /* 経歴セクション */
 #career {
     justify-content: space-between; /* 左右に分ける */
