--- a/style.css
+++ b/style.css
@@ -104,6 +104,23 @@ p {
     border-radius: 8px; /* 画像を丸くする場合 */
 }
 
+/* リンク用ロゴのスタイル */
+.link-logo {
+    width: 32px; /* ロゴ画像の幅 */
+    height: 32px; /* ロゴ画像の高さ */
+    margin-right: 10px; /* 必要に応じて間隔を調整 */
+}
+
+ul {
+    list-style-type: none; /* デフォルトのリストマーカーを削除 */
+    padding: 0;
+    display: flex; /* 横並びに表示 */
+    gap: 15px; /* リンク間のスペースを調整 */
+}
+
+ul li {
+    display: inline-block;
+}
 
 /* フッター設定 */
 footer {
