--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
