--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ p {
     gap: 15px; /* リンク間のスペースを調整 */
 } */
 
-.related .link ul li {
+.related ul{
     list-style-type: none; /* デフォルトのリストマーカーを削除 */
     padding: 0;
     display: flex; /* 横並びに表示 */
