--- a/style.css
+++ b/style.css
@@ -111,19 +111,15 @@ p {
     margin-right: 10px; /* 必要に応じて間隔を調整 */
 }
 
-/* ul {
-    list-style-type: none; /* デフォルトのリストマーカーを削除 */
-    padding: 0;
-    display: flex; /* 横並びに表示 */
-    gap: 15px; /* リンク間のスペースを調整 */
-} */
+.related{
+    display: inline-block;
+} 
 
 .related ul{
     list-style-type: none; /* デフォルトのリストマーカーを削除 */
     padding: 0;
     display: flex; /* 横並びに表示 */
     gap: 15px; /* リンク間のスペースを調整 */
-/*     display: inline-block; */
 }
 
 #images figure {
