--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header .name {
 /* メインセクション */
 main {
     padding: 20px;
-    max-width: 800px;
+    max-width: 75%;
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -172,9 +172,9 @@ body::after {
         text-align: center;     /* テキストを中央揃えにする */
     }
 
-    .hamburger-menu {
+/*     .hamburger-menu {
         display: block; /* ハンバーガーメニューを表示 */
-    }
+    } */
 
 /*     .navbar ul {
         flex-direction: column; /* ナビゲーションを縦並びにする */
