--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header .name {
 /* メインセクション */
 main {
     padding: 20px;
-    max-width: 75%;
+    max-width: 100%;
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -99,6 +99,7 @@ p {
 
 /* 経歴セクション */
 #career {
+    display: flex; /* 横並びに配置 */
     justify-content: space-between; /* 左右に分ける */
     align-items: center;
     gap: 20px;
@@ -113,7 +114,7 @@ p {
 
 .career-text {
     flex: 1; /* テキストエリアに広さを与える */
-    max-width: 40%; /* 最大幅を50%に設定 */
+    max-width: 50%; /* 最大幅を50%に設定 */
 }
 
 .career-image img {
