--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header .name {
 /* メインセクション */
 main {
     padding: 20px;
-    max-width: 100%;
+    max-width: 900px;
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
