--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ main {
     max-width: 900px;
     margin: 0 auto;
     background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+/*     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    box-shadow: none;
     border-radius: 8px;
     flex: 1; /* ページ全体を埋めるために伸縮可能に */
 }
@@ -81,6 +82,7 @@ p {
 
 /* 経歴セクション */
 #career {
+    position: relative;
     display: flex; /* 子要素を横並びに配置 */
     justify-content: space-between; /* 子要素間のスペースを均等に配置 */
     align-items: center; /* 子要素を縦方向の中央に揃える */
@@ -101,7 +103,7 @@ p {
 }
 
 .career-image img {
-    width: 100%; /* 画像の幅をコンテナに合わせて可変に */
+    width: 200px; /* 画像の幅をコンテナに合わせて可変に */
     height: auto; /* アスペクト比を維持 */
     border-radius: 8px; /* 画像の角を丸くする */
 }
