--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ p {
 .career-content {
     display: flex; /* 子要素を横並びに配置 */
     justify-content: space-between; /* 子要素間のスペースを均等に配置 */
-    align-items: center; /* 子要素を縦方向の中央に揃える */
+/*     align-items: center; /* 子要素を縦方向の中央に揃える */ */
     gap: 20px; /* テキストと画像の間隔 */
     margin-bottom: 30px;
 }
