--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ p {
 .career-content {
     display: flex; /* 子要素を横並びに配置 */
     justify-content: space-between; /* 子要素間のスペースを均等に配置 */
-/*     align-items: center; /* 子要素を縦方向の中央に揃える */ */
+    align-items: center; /* 子要素を縦方向の中央に揃える */
     gap: 20px; /* テキストと画像の間隔 */
     margin-bottom: 30px;
 }
@@ -92,18 +92,6 @@ p {
     flex: 1; /* テキストエリアの幅を可変に */
     max-width: 50%; /* テキストエリアの最大幅を全体の50%に設定 */
     line-height: 1.8; /* 行間を調整して読みやすく */
-}
-
-.career-image {
-    flex: 1; /* 画像エリアの幅を可変に */
-    max-width: 50%; /* 画像エリアの最大幅を全体の50%に設定 */
-    text-align: right; /* 画像を右揃えに */
-}
-
-.career-image img {
-    width: 200px; /* 画像の幅をコンテナに合わせて可変に */
-    height: auto; /* アスペクト比を維持 */
-    border-radius: 8px; /* 画像の角を丸くする */
 }
 
 /* リンク用ロゴのスタイル */
@@ -122,6 +110,18 @@ p {
     padding: 0;
     display: flex; /* 横並びに表示 */
     gap: 15px; /* リンク間のスペースを調整 */
+}
+
+.career-image {
+    flex: 1; /* 画像エリアの幅を可変に */
+    max-width: 50%; /* 画像エリアの最大幅を全体の50%に設定 */
+    text-align: right; /* 画像を右揃えに */
+}
+
+.career-image img {
+    width: 200px; /* 画像の幅をコンテナに合わせて可変に */
+    height: auto; /* アスペクト比を維持 */
+    border-radius: 8px; /* 画像の角を丸くする */
 }
 
 #images figure {
