--- a/style.css
+++ b/style.css
@@ -126,13 +126,13 @@ p {
 }
 
 .image{
-    display: inline-block;
+/*     display: inline-block; */
+    display: flex; /* 横並びに表示 */
 } 
 
 #images figure {
     margin: 20px 0;
     text-align: center; /* キャプションを中央揃え */
-    display: flex; /* 横並びに表示 */
 }
 
 #images img {
