--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ p {
     align-items: center;
     justify-content: center;
     opacity: 0;
+    z-index: 1000;
     transition: transform 0.5s ease-out, opacity 0.5s ease-in-out;
 }
 
