--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ p {
     align-items: center;
     justify-content: center;
     opacity: 0;
+    z-index: 9999;  /* 他の要素より上に表示されるようにする */
     transition: transform 0.5s ease-out, opacity 0.5s ease-in-out;
 }
 
