--- a/style.css
+++ b/style.css
@@ -180,6 +180,42 @@ p {
     opacity: 1;
 }
 
+/* ポップアップ用の背景スタイル */
+.overlay {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+}
+
+/* ポップアップ画像のスタイル */
+.popup-image {
+  max-width: 90%;
+  max-height: 90%;
+  margin: auto;
+  display: block;
+}
+
+/* 閉じるボタン */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 2000;
+}
+
+
 /* フッター設定 */
 footer {
     text-align: center;
