--- a/style.css
+++ b/style.css
@@ -273,13 +273,20 @@ body::after {
         gap: 20px; /* 各要素の間隔を調整 */
     }
 
-    .career-text, .career-image {
+    .career-text, .career-image, .hobby  {
         max-width: 100%; /* 幅を100%にしてモバイルでも全体に合わせる */
         margin-left: 0; /* 左側の余白をリセット */
     }
 
+    .career-image {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
     .career-image img {
-        order: -1; /* 画像を一番上に表示 */
+/*         order: -1; /* 画像を一番上に表示 */ */
         width: 100%; /* 画像の幅を親要素に合わせる */
         height: auto; /* アスペクト比を維持 */
         max-width: 300px; /* 最大幅を指定（必要に応じて調整） */
@@ -287,6 +294,10 @@ body::after {
 
     .career-text {
         text-align: center; /* テキストを中央に配置 */
+    }
+
+    .hobby {
+        text-align: left; /* 趣味・特技リストを左寄せ */
     }
 
     footer {
