--- a/style.css
+++ b/style.css
@@ -278,12 +278,12 @@ body::after {
         margin-left: 0; /* 左側の余白をリセット */
     }
 
-    .career-image {
+/*     .career-image {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-    }
+    } */
 
     .career-image img {
         order: 0; /* 画像を一番上に表示 */
