--- a/style.css
+++ b/style.css
@@ -278,14 +278,14 @@ body::after {
         margin-left: 0; /* 左側の余白をリセット */
     }
 
-/*     .career-image {
+    .career-image {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-    } */
+    }
 
-    .career-image img {
+    .career-image .img {
         order: 0; /* 画像を一番上に表示 */
         width: 100%; /* 画像の幅を親要素に合わせる */
         height: auto; /* アスペクト比を維持 */
@@ -297,7 +297,7 @@ body::after {
         order: 1; /* career-textを2番目に表示 */
     }
 
-    .career-image hobby {
+    .career-image .hobby {
         text-align: left; /* 趣味・特技リストを左寄せ */
         order: 2; /* hobbyを3番目に表示 */
     }
