--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ body::after {
     }
 
     .career-content {
+        display: flex;
         flex-direction: column; /* 縦並びに変更 */
         align-items: center; /* 中央揃えにする */
         gap: 20px; /* 各要素の間隔を調整 */
@@ -283,7 +284,6 @@ body::after {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        order: 0; /* 画像を一番上に表示 */
     }
 
     .career-image img {
