--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ p {
     margin-left: 40px; /* 画像を右に寄せる */
 }
 
-.career-image img {
+.career-image face{
     width: 200px; /* 画像の幅をコンテナに合わせて可変に */
     height: auto; /* アスペクト比を維持 */
     border-radius: 8px; /* 画像の角を丸くする */
@@ -286,7 +286,7 @@ body::after {
         justify-content: flex-start;
     }
 
-    .career-image img {
+    .career-image face{
         order: 0; /* 画像を一番上に表示 */
         width: 100%; /* 画像の幅を親要素に合わせる */
         height: auto; /* アスペクト比を維持 */
