--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ body::after {
     }
 
     .career-image {
-        display: flex;
+        display: contents;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
